@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-TheOneMemoryヘイゼル"
+CONFIG_LOCALVERSION="-TheOneMemory-sc/oc:|01"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_NO_HZ=y
