@@ -1,5 +1,7 @@
-<b><#selectbg_g>Jun 23,2024</#></b>
+<b><#selectbg_g>Sep 07,2024</#></b>
 
+  <*> Rearrange kernel source</*>
+  <*> KernelSU v0.9.5 Support</*>
   <*> Add Some Tweak Changes, and Improvements</*>
 
 
